--- a/template.html
+++ b/template.html
@@ -14,14 +14,22 @@
     </h1>
     <p class="lead">This is a simple RSS reader.</p>
     <hr class="my-4">
-    <form>
+    <form id="rss-form">
       <div class="form-group row">
-        <div class="col-2">
-          <input class="form-control" type="text" placeholder="Name" name="rss">
+        <div class="col-5">
+          <input class="form-control" type="text" placeholder="Name" name="url">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <div class="col">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
       </div>
     </form>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div id="channels-feed" class="col-6"></div>
+      <div id="articles-feed" class="col-6"></div>
+    </div>
   </div>
 </body>
 
