--- a/template.html
+++ b/template.html
@@ -8,6 +8,23 @@
 </head>
 
 <body>
+  <div class="modal" tabindex="-1" role="dialog" id="description-modal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="jumbotron">
     <div class="container">
       <h1 class="display-4">
@@ -21,7 +38,7 @@
             <input class="form-control" type="text" placeholder="Name" name="url">
           </div>
           <div class="col">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" name="submit">Submit</button>
           </div>
         </div>
       </form>
