--- a/__tests__/__fixtures__/index.html
+++ b/__tests__/__fixtures__/index.html
@@ -8,27 +8,52 @@
 </head>
 
 <body>
-  <div class="jumbotron">
-    <h1 class="display-4">
-      RSS reader
-    </h1>
-    <p class="lead">This is a simple RSS reader.</p>
-    <hr class="my-4">
-    <form id="rss-form">
-      <div class="form-group row">
-        <div class="col-5">
-          <input class="form-control" type="text" placeholder="Name" name="url">
+  <div class="modal" tabindex="-1" role="dialog" id="description-modal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title"></h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
-        <div class="col">
-          <button type="submit" class="btn btn-primary">Submit</button>
+        <div class="modal-body">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       </div>
-    </form>
+    </div>
+  </div>
+  <div class="jumbotron">
+    <div class="container">
+      <h1 class="display-4">
+        RSS reader
+      </h1>
+      <p class="lead">This is a simple RSS reader.</p>
+      <hr class="my-4">
+      <form id="rss-form">
+        <div class="form-group row">
+          <div class="col-5">
+            <input class="form-control" type="text" placeholder="Name" name="url">
+          </div>
+          <div class="col">
+            <button type="submit" class="btn btn-primary" name="submit">Submit</button>
+          </div>
+        </div>
+      </form>
+    </div>
   </div>
   <div class="container">
     <div class="row">
-      <div id="channels-feed" class="col-6"></div>
-      <div id="articles-feed" class="col-6"></div>
+      <div class="col-6">
+        <h3>Channel list</h3>
+        <div id="channels-feed">Nothing added yet.</div>
+      </div>
+      <div class="col-6">
+        <h2>Feed</h2>
+        <div id="articles-feed"></div>
+      </div>
     </div>
   </div>
 </body>
