add required for url input

--- a/template.html
+++ b/template.html
@@ -35,7 +35,7 @@
       <form id="rss-form">
         <div class="form-group row">
           <div class="col-5">
-            <input class="form-control" type="text" placeholder="Name" name="url">
+            <input class="form-control" type="text" placeholder="Name" name="url" required>
           </div>
           <div class="col">
             <button type="submit" class="btn btn-primary" name="submit">Submit</button>
